<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Run Away</string>

    <string name="font_name">NanumBarunGothic.ttf</string>

    <string name="upgradeLevel">Lv. </string>
    <string name="upgradeMaxLevel">Max </string>

    <string name="gameReadyStart">Game\nStart</string>
    <string name="gameReadyEnemies">Enemies</string>
    <string name="gameReadySkillSlots">Skill Slots</string>
    <string name="gameReadyStage">STAGE</string>
    <string name="gameReadyFirstClear">Stage Clear Bonus : +2</string>

    <string name="gameMenuRestart">Restart</string>
    <string name="gameMenuReselectAbilities">Reselect Abilities</string>
    <string name="gameMenuSelectStage">Select Stage</string>
    <string name="gameMenuGoToMainMenu">Main Menu</string>
    <string name="gameMenuOptions">Options</string>

    <string name="enemyElectronName">Electron</string>
    <string name="enemyDownQuarkName">Down Quark</string>
    <string name="enemyElectronNeutrinoName">Electron Neutrino</string>
    <string name="enemyUpQuarkName">Up Quark</string>
    <string name="enemyMuonName">Muon</string>
    <string name="enemyStrangeQuarkName">Strange Quark</string>
    <string name="enemyMuonNeutrinoName">Muon Neutrino</string>
    <string name="enemyCharmQuarkName">Charm Quark</string>
    <string name="enemyTauName">Tau</string>
    <string name="enemyBottomQuarkName">Bottom Quark</string>
    <string name="enemyTauNeutrinoName">Tau Neutrino</string>
    <string name="enemyTopQuarkName">Top Quark</string>
    <string name="enemyPhotonName">Photon</string>
    <string name="enemyZBosonName">Z Boson</string>
    <string name="enemyWBosonName">W Boson</string>
    <string name="enemyGluonName">Gluon</string>
    <string name="enemyHiggsBosonName">Higgs Boson</string>

    <string name="abilityNone">-</string>
    <string name="abilityDashName">Dash</string>
    <string name="abilityTeleportationName">Teleportation</string>
    <string name="abilityHidingName">Hiding</string>
    <string name="abilityProtectionName">Protection</string>
    <string name="abilityShadowName">Shadow</string>
    <string name="abilityIllusionName">Illusion</string>
    <string name="abilityShockWaveName">Shock Wave</string>
    <string name="abilityDistortionFieldName">Distortion Field</string>
    <string name="abilityMagnetismName">Acceleration</string>
    <string name="abilitySlowBulletFireName">Decelerating Shot</string>
    <string name="abilityStunBulletFireName">Stunning Shot</string>
    <string name="abilitySpeedUpName">Speed Up</string>

    <string name="statusSpeed">Speed</string>
    <string name="statusSight">Sight</string>
    <string name="statusSize">Size</string>
    <string name="statusAbility">Skill</string>
</resources>
