<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.medowhill.jaemin.runaway.view.GameView
        android:id="@+id/game_gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.medowhill.jaemin.runaway.view.StarCollectionView
        android:id="@+id/game_starCollection"
        android:layout_width="@dimen/gameStarCollectionWidth"
        android:layout_height="@dimen/gameStarCollectionHeight"
        android:layout_gravity="top|left" />

    <com.medowhill.jaemin.runaway.view.DirectionControl
        android:id="@+id/game_directionControl"
        android:layout_width="@dimen/gameDirectionControlSize"
        android:layout_height="@dimen/gameDirectionControlSize"
        android:layout_gravity="left|bottom" />

    <LinearLayout
        android:id="@+id/game_linearLayout_abilityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:orientation="horizontal">

        <com.medowhill.jaemin.runaway.view.AbilityButton
            android:id="@+id/game_abilityButton4"
            android:layout_width="@dimen/gameAbilityButtonSize"
            android:layout_height="@dimen/gameAbilityButtonSize" />

        <com.medowhill.jaemin.runaway.view.AbilityButton
            android:id="@+id/game_abilityButton3"
            android:layout_width="@dimen/gameAbilityButtonSize"
            android:layout_height="@dimen/gameAbilityButtonSize" />

        <com.medowhill.jaemin.runaway.view.AbilityButton
            android:id="@+id/game_abilityButton2"
            android:layout_width="@dimen/gameAbilityButtonSize"
            android:layout_height="@dimen/gameAbilityButtonSize" />

        <com.medowhill.jaemin.runaway.view.AbilityButton
            android:id="@+id/game_abilityButton1"
            android:layout_width="@dimen/gameAbilityButtonSize"
            android:layout_height="@dimen/gameAbilityButtonSize" />

    </LinearLayout>

    <ImageView
        android:id="@+id/game_button_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:background="@drawable/game_pause" />

    <ImageView
        android:id="@+id/game_button_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:background="@drawable/game_resume"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/game_button_restart"
            android:layout_width="@dimen/gameMenuWidth"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gameMenuMargin"
            android:background="@drawable/game_menu_background"
            android:text="@string/gameMenuRestart"
            android:textColor="@color/gameMenuText"
            android:textSize="@dimen/gameMenuTextSize"
            android:visibility="invisible" />

        <Button
            android:id="@+id/game_button_reselectAbilities"
            android:layout_width="@dimen/gameMenuWidth"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gameMenuMargin"
            android:background="@drawable/game_menu_background"
            android:text="@string/gameMenuReselectAbilities"
            android:textColor="@color/gameMenuText"
            android:textSize="@dimen/gameMenuTextSize"
            android:visibility="invisible" />

        <Button
            android:id="@+id/game_button_selectStage"
            android:layout_width="@dimen/gameMenuWidth"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gameMenuMargin"
            android:background="@drawable/game_menu_background"
            android:text="@string/gameMenuSelectStage"
            android:textColor="@color/gameMenuText"
            android:textSize="@dimen/gameMenuTextSize"
            android:visibility="invisible" />

        <Button
            android:id="@+id/game_button_goToMainMenu"
            android:layout_width="@dimen/gameMenuWidth"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gameMenuMargin"
            android:background="@drawable/game_menu_background"
            android:text="@string/gameMenuGoToMainMenu"
            android:textColor="@color/gameMenuText"
            android:textSize="@dimen/gameMenuTextSize"
            android:visibility="invisible" />

        <Button
            android:id="@+id/game_button_options"
            android:layout_width="@dimen/gameMenuWidth"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/gameMenuMargin"
            android:background="@drawable/game_menu_background"
            android:text="@string/gameMenuOptions"
            android:textColor="@color/gameMenuText"
            android:textSize="@dimen/gameMenuTextSize"
            android:visibility="invisible" />

    </LinearLayout>

</FrameLayout>
